# alice

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  fix_structure.py  main.py  playground.py  pyproject.toml  structured_output.py  translate.py
alice/agents/structure_fixer/: __init__.py
alice/agents/translater/: __init__.py  prompt.py
alice/chunkings/: document.py
alice/data_source/: agno_doc.py
alice/db/: __init__.py
alice/model/: embedding.py  llm.py
alice/prompt/: base.py
alice/tool/crawl4ai/: __init__.py
alice/utils/: agent.py  async_queue.py
docs/features/: agent_tune_prompts.md  epub_translater.md
docs/system_designs/: epub_translater_design.md  prompt_system.md
scripts/: install-pre-commit.sh
