[project]
name = "alice"
version = "0.1.0"
description = "Alice Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.2",
    "fastapi[standard]>=0.116.0",
    "lancedb>=0.24.0",
    "litellm>=1.74.1",
    "mcp>=1.11.0",
    "nest-asyncio>=1.6.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.3",
    "sqlalchemy>=2.0.41",
    "tantivy>=0.24.0",
]
